# pytorch-probing

./: .gitignore  README.md  pytest.ini  setup.cfg
.github/workflows/: documentation.yml  pipeline-ubuntu  pipeline-ubuntu.yml  pipeline-windows  pipeline-windows.yml  python-publish.yml  test.yml
dev/: collector.ipynb  interceptor.ipynb  probed.ipynb
docs/: Makefile  conf.py  index.rst  install_doc_requirements.py  make.bat  tear_down.py
docs/_templates/: layout.html
examples/: Collect.ipynb  Interceptor.ipynb  Prober.ipynb  README.md
src/pytorch_probing/: __init__.py  interceptor.py  interceptor_base.py  interceptor_layer.py  module_wrapper.py  parallel_module_dict.py
src/pytorch_probing/collect/: collect.py  collected_dataset.py
src/pytorch_probing/interceptor/: interceptor.py  interceptor_base.py  interceptor_layer.py
src/pytorch_probing/prober/: prober.py
test/: test_collect.py  test_examples.py  utils.py
tests/: test_interceptor.py  utils.py
