[metadata]
name = pytorch_probing
version = 0.1.0
author = EltonCN, H.IAAC
author_email = elton.nascimento@students.ic.unicamp.br, hiaac@unicamp.br
description = PyTorch-Probing is a framework for probing PyTorch models internal functioning. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EltonCN/pytorch-probing
project_urls =
    Bug Tracker = https://github.com/EltonCN/pytorch-probing/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

license_files = LICENSE
license = LGPLv3

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    numpy
    torch

[options.packages.find]
where = src